--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "dio-website",
+  "name": "dio-clone-ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "api": "json-server --watch db.json -p 8001"
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "axios": "^1.1.3",
-    "json-serve": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
@@ -24,7 +22,9 @@
   "devDependencies": {
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.2.0",
+    "typescript": "^4.6.4",
     "vite": "^3.2.0"
   }
 }
